メニュー修正

--- a/public/_header.html
+++ b/public/_header.html
@@ -28,7 +28,7 @@
     <!-- ヘッダー関連のステータス表示エリア -->
     <div id="header-status-message" class="text-center h-5 mt-2"></div>
 
-    <!-- サイドバーメニュー (デフォルトでは非表示) -->
+    <!-- サイドバーメニュー (デフォルトではアイコンのみ表示) -->
     <div id="sidebar-menu" class="fixed inset-y-0 left-0 w-16 bg-white shadow-lg z-30 transform -translate-x-full transition-transform duration-300 ease-in-out">
         <div class="flex justify-end p-4">
             <button id="close-menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
