--- a/public/_header.html
+++ b/public/_header.html
@@ -29,7 +29,8 @@
     <div id="header-status-message" class="text-center h-5 mt-2"></div>
 
     <!-- サイドバーメニュー (デフォルトではアイコンのみ表示) -->
-    <div id="sidebar-menu" class="fixed inset-y-0 left-0 w-16 bg-white shadow-lg z-30 transform -translate-x-full transition-transform duration-300 ease-in-out">
+    <!-- transform -translate-x-full を削除し、w-16 を初期幅に設定 -->
+    <div id="sidebar-menu" class="fixed inset-y-0 left-0 w-16 bg-white shadow-lg z-30 transition-all duration-300 ease-in-out">
         <div class="flex justify-end p-4">
             <button id="close-menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
