--- a/public/_header.html
+++ b/public/_header.html
@@ -1,4 +1,4 @@
-<header class="p-4 max-w-4xl mx-auto">
+<header class="p-4 max-w-4xl mx-auto md:ml-64 md:max-w-full"> <!-- Adjust header position for desktop sidebar -->
     <div class="flex justify-between items-center">
         <!-- 左側: ハンバーガーメニューボタン (モバイルのみ表示) -->
         <div class="md:hidden flex justify-start relative">
@@ -16,14 +16,14 @@
             </a>
         </div>
 
-        <!-- 右側: デスクトップ用ユーザー情報とログアウトボタン (モバイルではアイコンのみ表示) -->
-        <div class="hidden md:flex justify-end items-center space-x-2 text-sm text-gray-600">
+        <!-- 右側: デスクトップ用ユーザー情報とログアウトボタン -->
+        <div class="flex justify-end items-center space-x-2 text-sm text-gray-600">
             <a href="profile.html" class="flex items-center space-x-2 text-gray-600 hover:text-main no-underline">
                 <!-- ユーザーアイコン画像 -->
                 <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover">
-                <span id="user-info"></span>
+                <span id="user-info" class="hidden md:inline"></span> <!-- User info visible on desktop only -->
             </a>
-            <button id="logout-button-desktop" class="btn bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded text-xs">ログアウト</button>
+            <button id="logout-button-desktop" class="btn bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded text-xs hidden md:block">ログアウト</button>
         </div>
 
         <!-- 右側: ユーザー情報 (モバイルではアイコンのみ表示) -->
@@ -37,9 +37,10 @@
     <!-- ヘッダー関連のステータス表示エリア -->
     <div id="header-status-message" class="text-center h-5 mt-2"></div>
 
-    <!-- モバイル用サイドバーメニュー (デフォルトでは非表示) -->
-    <div id="mobile-menu" class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-30 transform -translate-x-full transition-transform duration-300 ease-in-out md:hidden">
-        <div class="flex justify-end p-4">
+    <!-- サイドバーメニュー -->
+    <div id="mobile-menu" class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-30 transition-transform duration-300 ease-in-out
+                                  transform -translate-x-full md:translate-x-0 md:block"> <!-- Added md:translate-x-0 and md:block -->
+        <div class="flex justify-end p-4 md:hidden"> <!-- Close button only on mobile -->
             <button id="close-menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -73,7 +74,7 @@
     </div>
 
     <!-- オーバーレイ (メニューが開いているときに背景を暗くする) -->
-    <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 hidden"></div>
+    <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 hidden md:hidden"></div> <!-- Added md:hidden to overlay -->
 
     <script type="module">
         import { auth, showStatus } from './shared.js'; // shared.jsからauthとshowStatusをインポート
@@ -140,6 +141,7 @@
                 mobileMenuOverlay.classList.remove('hidden');
             });
 
+            // Close menu button and overlay click listeners
             closeMenuButton.addEventListener('click', () => {
                 mobileMenu.classList.add('-translate-x-full');
                 mobileMenuOverlay.classList.add('hidden');
@@ -153,8 +155,11 @@
             // メニュー内のリンクをクリックした際もメニューを閉じる
             mobileMenu.querySelectorAll('a').forEach(link => {
                 link.addEventListener('click', () => {
-                    mobileMenu.classList.add('-translate-x-full');
-                    mobileMenuOverlay.classList.add('hidden');
+                    // Only close if it's the mobile menu (i.e., not on desktop where it's always open)
+                    if (window.innerWidth < 768) { // Tailwind's 'md' breakpoint is 768px
+                        mobileMenu.classList.add('-translate-x-full');
+                        mobileMenuOverlay.classList.add('hidden');
+                    }
                 });
             });
         });
